service page design changing

--- a/our_services.html
+++ b/our_services.html
@@ -1661,33 +1661,38 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xl-4 aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
-                        <div class="footer__icon">
-                            <ul>
-                                <li>
-                                    <a href="https://web.facebook.com/people/Digital-Minds-On/61565893842788/"
-                                        target="_blank">
-                                        <i class="icofont-facebook"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://www.instagram.com/digitalmindson/" target="_blank">
-                                        <i class="icofont-instagram"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="skype:live:.cid.a40e7b5b65a42e46?chat" target="_blank"><i
-                                            class="icofont-skype"></i></a>
-                                </li>
-                                <li>
-                                    <a href="https://www.linkedin.com/company/digital-minds-on" target="_blank">
-                                        <i class="icofont-linkedin"></i>
-                                    </a>
-                                </li>
-                            </ul>
+                    <div class="col-xl-6 aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
+                        <div class="parent-contact">
+                            <div class="contact-us-img">
+                                <img src="assets/img/landingImg/Group-1162-768x628-1.webp" alt="Contact Us Image">
+                            </div>
+                            <div class="footer__icon">
+                                <ul>
+                                    <li>
+                                        <a href="https://web.facebook.com/people/Digital-Minds-On/61565893842788/"
+                                            target="_blank">
+                                            <i class="icofont-facebook"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.instagram.com/digitalmindson/" target="_blank">
+                                            <i class="icofont-instagram"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="skype:live:.cid.a40e7b5b65a42e46?chat" target="_blank"><i
+                                                class="icofont-skype"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.linkedin.com/company/digital-minds-on" target="_blank">
+                                            <i class="icofont-linkedin"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-xl-8 aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
+                    <div class="col-xl-6 aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
                         <div class="contact__input__wrapper contact__grident__bg">
                             <form id="contact-form" class="contact-form" action="email.php">
                                 <div class="row">
