--- a/team.html
+++ b/team.html
@@ -511,7 +511,7 @@
                                 </div>
                                 <div class="team__member__name">
                                     <h6>Mr. Hamid Raza</h6>
-                                    <p>UI/UX Designer</p>
+                                    <p>Frontend Developer</p>
                                 </div>
                             </div>
                         </div>
