portfolio name fixed

--- a/web-development-solution.html
+++ b/web-development-solution.html
@@ -198,7 +198,7 @@
 
                                             <!-- <li><a href="#">Careers </a></li> -->
                                             <li><a href="blog">BLOG </a></li>
-                                            <li><a href="project">Portfolio </a></li>
+                                            <li><a href="portfolio">Portfolio </a></li>
 
 
                                             <li class="headerarea__common__dropdown"><a
@@ -277,8 +277,8 @@
                                         class="offcanvas__sub_menu_item">Blog</a></li>
                                 <li class="offcanvas__sub_menu_li"><a href="team"
                                         class="offcanvas__sub_menu_item">Team</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="project"
-                                        class="offcanvas__sub_menu_item">Projects</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="portfolio"
+                                        class="offcanvas__sub_menu_item">Portfolio</a></li>
                                 <!-- <li class="offcanvas__sub_menu_li"><a href="project-details.html"
                                         class="offcanvas__sub_menu_item">Project Details</a></li> -->
                             </ul>
@@ -885,7 +885,7 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="project">Portfolio </a>
+                                                <a href="portfolio">Portfolio </a>
                                             </li>
                                             <li>
                                                 <a href="seo-services">Seo Services</a>
