--- a/portfolio.html
+++ b/portfolio.html
@@ -207,7 +207,7 @@
 
                                             <!-- <li><a href="#">Careers </a></li> -->
                                             <li><a href="blog">BLOG </a></li>
-                                            <li><a href="project">Portfolio </a></li>
+                                            <li><a href="portfolio">Portfolio </a></li>
 
 
                                             <li class="headerarea__common__dropdown"><a
@@ -287,8 +287,8 @@
                                         class="offcanvas__sub_menu_item">Blog</a></li>
                                 <li class="offcanvas__sub_menu_li"><a href="team"
                                         class="offcanvas__sub_menu_item">Team</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="project"
-                                        class="offcanvas__sub_menu_item">Projects</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="portfolio"
+                                        class="offcanvas__sub_menu_item">Portfolio</a></li>
                                 <!-- <li class="offcanvas__sub_menu_li"><a href="project-details.html"
                                             class="offcanvas__sub_menu_item">Project Details</a></li> -->
                             </ul>
@@ -336,13 +336,13 @@
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="breadcrumbarea__content__wraper">
                             <div class="breadcrumbarea__title">
-                                <h2 class="heading">All Projects </h2>
+                                <h2 class="heading">All Portfolio </h2>
                             </div>
                             <div class="breadcrumbarea__inner">
                                 <ul>
                                     <li><a href="/">Home</a></li>
                                     <li>// </li>
-                                    <li> All Projects </li>
+                                    <li> All Portfolio </li>
                                 </ul>
                             </div>
                         </div>
@@ -1192,7 +1192,7 @@
                                 <div class="footer__menu">
                                     <ul>
                                         <li>
-                                            <a href="project">Portfolio </a>
+                                            <a href="portfolio">Portfolio </a>
                                         </li>
                                         <li>
                                             <a href="seo-services">Seo Services</a>
