--- a/portfolio.html
+++ b/portfolio.html
@@ -641,6 +641,31 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2900">
+                        <div class="project__single single__transform">
+                            <div class="project__img">
+                                <img src="assets/img/full-page/lightnexonpackaging.webp" alt="gym" loading="lazy">
+                            </div>
+                            <div class="project__content">
+                                <div class="project__heading">
+                                    <h3><a href="https://www.nexonpackaging.com/" target="_blank">NexOnPackaging</a></h3>
+                                </div>
+                                <div class="project__icon">
+                                    <a class="direction__btn direction__btn--2" href="https://www.nexonpackaging.com/"
+                                        target="_blank"><svg width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
+                                                stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                            <path d="M10.9902 23.0107L22.8908 11.1101" stroke="#0A0624"
+                                                stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
                 <div class="row">
