--- a/index.html
+++ b/index.html
@@ -528,15 +528,11 @@
                         </div>
                         <div class="col-md-6 text-center mt-4 mt-md-0" data-aos="zoom-in" data-aos-duration="2000">
                             <p class="mt-2">
-                                Digital Minds On specializes in delivering cutting-edge <a
-                                    href="software-development-services" style="font-weight: bold; color: #FE0094;">
-                                    software development solutions</a>
+                                Digital Minds On specializes in delivering cutting-edge software development solutions
                                 tailored to meet the unique needs of modern businesses. Our team of experienced
                                 developers and designers collaborates to create high-quality, efficient, and scalable
-                                applications that drive productivity and innovation. With expertise in web and <a
-                                    href="mobile-app-development-services"
-                                    style="font-weight: bold; color: #FE0094;">mobile
-                                    development</a>, cloud solutions, and custom software, we help businesses streamline
+                                applications that drive productivity and innovation. With expertise in web and mobile
+                                    development, cloud solutions, and custom software, we help businesses streamline
                                 operations, enhance user experiences, and achieve their digital transformation goals.
                             </p>
                         </div>
