--- a/digital-marketing-and-advertising-company.html
+++ b/digital-marketing-and-advertising-company.html
@@ -624,7 +624,7 @@
                                 </p>
                                 <p>The best digital marketing companies use innovative tools and metrics in evaluating
                                     different aspects of their campaign. They work on each invest that you make to get
-                                    the maximum return from <a href="seo-services" style="font-weight: bold; color: #FE0094;">SEO</a> to the social media advertisements. When it comes to
+                                    the maximum return from <a href="seo-services" style="font-weight: bold; color: #FE0094;">SEO</a> to the <a href="https://lahoredigitalmedia.com/social-media-marketing/" style="font-weight: bold; color: #FE0094;">social media marketing</a>. When it comes to
                                     such level of proficiency, companies can be confident their online image is in safe
                                     hands.
                                 </p>
