--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>About | Digital Minds on</title>
-    <meta name="description" content="">
+    <meta name="description" content="Digital Minds On offers bulk app development, web development, SEO, and software services. Connect with our team today!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
