--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Service | Business Consulting | Digital Minds On</title>
-    <meta name="description" content="">
+    <meta name="description" content="Digital Minds On specializes in web and app development, e-commerce solutions, and creative graphic design for businesses.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
@@ -21,18 +21,6 @@
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
-    <!-- title scrollbar -->
-    <script>
-        // Text for the title
-        let titleText = "Service | Business Consulting | Digital Minds On ";
-        let index = 0;
-        function scrollTitle() {
-            document.title = titleText.slice(index) + titleText.slice(0, index);
-            index = (index + 1) % titleText.length;
-        }
-        setInterval(scrollTitle, 200); 
-    </script>
-    <!-- title scrollbar -->
     <script>
         // Check and apply the theme on page load
         document.addEventListener("DOMContentLoaded", () => {
