--- a/web-development-solution.html
+++ b/web-development-solution.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Web Development Solutions: Crafting High-Performance Websites for Business | Digital Minds On </title>
-    <meta name="description" content="">
+    <title>Web Development Solutions: Crafting High-Performance Websites for Business | Digital Minds On</title>
+    <meta name="description" content="Digital Minds On offers expert web development, e-commerce solutions, custom CMS, and UI/UX design for scalable, high-performance websites.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
