--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Blog | Digital Minds on</title>
-    <meta name="description" content="">
+    <meta name="description" content="Digital Minds On delivers expert graphic design and web development services to create stunning visuals and dynamic websites.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
