--- a/team.html
+++ b/team.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Team | Digital Minds On</title>
-    <meta name="description" content="">
+    <meta name="description" content="The expert team at Digital Minds On delivers innovative web, app, e-commerce, and design solutions with precision and excellence.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
