--- a/wordpress-development-services.html
+++ b/wordpress-development-services.html
@@ -5,9 +5,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Custom Wordpress Development Services Solution | Digital Minds On </title>
-    <meta name="description"
-        content="Digital Minds On offers expert WordPress development services to maximize your site’s performance. Boost leads and sales with custom themes designed by our award-winning team. Start today!">
+    <title>Custom Wordpress Development Services Solution | Digital Minds On</title>
+    <meta name="description" content="Digital Minds On offers expert WordPress development services to maximize your site’s performance. Boost leads and sales with custom themes designed by our award-winning team. Start today!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
@@ -21,18 +20,6 @@
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
-    <!-- title scrollbar -->
-    <script>
-        // Text for the title
-        let titleText = "Custom Wordpress Development Services Solution | Digital Minds On ";
-        let index = 0;
-        function scrollTitle() {
-            document.title = titleText.slice(index) + titleText.slice(0, index);
-            index = (index + 1) % titleText.length;
-        }
-        setInterval(scrollTitle, 200); 
-    </script>
-    <!-- title scrollbar -->
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
         if (localStorage.getItem("theme-color") === "dark" || (!("theme-color" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
