--- a/website-development-company.html
+++ b/website-development-company.html
@@ -8,6 +8,7 @@
     <meta name="description"
         content="Digital Minds On offers expert graphic design and web development services, helping businesses create stunning visuals and build dynamic, user-friendly websites.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="noindex">
     <meta name="google-site-verification" content="-_ZrhZCdztaNLH4pipNSt_2lcMkOG-R4WaORMjFcjM4" />
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
     <!-- Place favicon.ico in the root directory -->
@@ -371,13 +372,11 @@
                 <div class="row">
                     <div class="col-xl-6 aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
                         <h3>Who We Are?</h3>
-                        <p>At Digital Minds On, we are passionate about delivering cutting-edge digital solutions to
-                            help businesses thrive in today’s competitive world. As a full-service web development and
-                            digital solutions company, we specialize in providing top-notch services tailored to your
-                            business needs.
-                            Our team of highly skilled professionals is committed to transforming your ideas into
-                            reality by creating innovative, scalable, and user-friendly solutions. Whether you need a
-                            website, mobile app, or digital marketing strategy, we’ve got you covered!</p>
+                        <p>Digital Minds On is best platform for app and web development. We not only develop them but
+                            also provide SEO services so you can attract larger number of audience. With Digital Minds
+                            On, you can improve the visibility and enhance the importance of your business. Contact
+                            Digital Minds On to take the business next level. We are just one click away from you, so
+                            contact us and eliminate all the issues that you are facing.</p>
                         <ul class="icon-box-list">
                             <li class="icon-box-content">
                                 <div class="icon-design">
@@ -388,16 +387,16 @@
 
                             <li class="icon-box-content">
                                 <div class="icon-design">
-                                    <i class="icofont-flag"></i>
+                                    <i class="icofont-smile"></i>
                                 </div>
-                                <p class="box-title"><span>Claim Submission</span></p>
+                                <p class="box-title"><span>happy client</span></p>
                             </li>
 
                             <li class="icon-box-content">
                                 <div class="icon-design">
                                     <i class="icofont-hand-holding-usd"></i>
                                 </div>
-                                <p class="box-title"><span>1% Denials Rate</span></p>
+                                <p class="box-title"><span>Projuct Complate</span></p>
                             </li>
 
                             <li class="icon-box-content">
@@ -1718,7 +1717,7 @@
                                     </div>
                                     <!-- CAPTCHA Math Question -->
                                     <div class="col-xl-12">
-                                        <p>Solve: <span id="captchaQuestion"></span></p>
+                                        <p>Solve: 7 + 4 = ? <span id="captchaQuestion"></span></p>
                                         <input type="number" id="captchaAnswer" class="contact__common__input"
                                             placeholder="Your Answer" required>
                                     </div>
