--- a/website-development-company.html
+++ b/website-development-company.html
@@ -376,7 +376,10 @@
                             also provide SEO services so you can attract larger number of audience. With Digital Minds
                             On, you can improve the visibility and enhance the importance of your business. Contact
                             Digital Minds On to take the business next level. We are just one click away from you, so
-                            contact us and eliminate all the issues that you are facing.</p>
+                            contact us and eliminate all the issues that you are facing. Once you partner with us, you
+                            will see an incredible amount of change. Digital Minds On is not only about improving
+                            visibility, it is also about being hassle free and stress free from promotion. Get your deal
+                            done with us, contact us and see the progress of your business.</p>
                         <ul class="icon-box-list">
                             <li class="icon-box-content">
                                 <div class="icon-design">
