--- a/website-development-company.html
+++ b/website-development-company.html
@@ -192,7 +192,7 @@
                         <div class="headerarea__component__wrap">
                             <div class="headerarea__component">
                                 <div class="headerarea__logo">
-                                    <a href="#home" data-scroll-nav="1">
+                                    <a href="/" data-scroll-nav="1">
                                         <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo"
                                             class="dark-mode">
                                         <img src="assets/img/logo/header/logo-local-host new.svg"
@@ -259,7 +259,7 @@
         <div class="offcanvas__header">
             <div class="offcanvas__inner">
                 <div class="offcanvas__logo">
-                    <a class="offcanvas__logo_link" href="javascript:void(0);">
+                    <a class="offcanvas__logo_link" href="/" data-scroll-nav="1">
                         <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode">
                         <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo"
                             class="light-mode">
