--- a/website-development-company.html
+++ b/website-development-company.html
@@ -307,13 +307,14 @@
                                 <h2 class="heading">Contact Us</h2>
                             </div>
                             <div class="breadcrumbarea__inner">
-                                <p>I develop captivating digital interfaces for conversion purposes. I build impressive
-                                    user-friendly websites at my role as a Web and UI Designer which deliver both visual
-                                    appeal and actionable outcomes. Through my use of HTML and CSS and JavaScript
-                                    expertise I develop interfaces which both deliver superior user experience and
-                                    better usability. My designs lead innovation by introducing new trends and inventive
-                                    approaches to each project no matter whether it involves complete new construction
-                                    or strategic redesign work.</p>
+                                <p>Digital Minds On is best platform for app and web development. We not only develop them but
+                            also provide SEO services so you can attract larger number of audience. With Digital Minds
+                            On, you can improve the visibility and enhance the importance of your business. Contact
+                            Digital Minds On to take the business next level. We are just one click away from you, so
+                            contact us and eliminate all the issues that you are facing. Once you partner with us, you
+                            will see an incredible amount of change. Digital Minds On is not only about improving
+                            visibility, it is also about being hassle free and stress free from promotion. Get your deal
+                            done with us, contact us and see the progress of your business.</p>
                             </div>
                         </div>
                     </div>
@@ -372,14 +373,13 @@
                 <div class="row">
                     <div class="col-xl-6 aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
                         <h3>Who We Are?</h3>
-                        <p>Digital Minds On is best platform for app and web development. We not only develop them but
-                            also provide SEO services so you can attract larger number of audience. With Digital Minds
-                            On, you can improve the visibility and enhance the importance of your business. Contact
-                            Digital Minds On to take the business next level. We are just one click away from you, so
-                            contact us and eliminate all the issues that you are facing. Once you partner with us, you
-                            will see an incredible amount of change. Digital Minds On is not only about improving
-                            visibility, it is also about being hassle free and stress free from promotion. Get your deal
-                            done with us, contact us and see the progress of your business.</p>
+                        <p>At Digital Minds On, we are passionate about delivering cutting-edge digital solutions to
+                            help businesses thrive in today’s competitive world. As a full-service web development and
+                            digital solutions company, we specialize in providing top-notch services tailored to your
+                            business needs.
+                            Our team of highly skilled professionals is committed to transforming your ideas into
+                            reality by creating innovative, scalable, and user-friendly solutions. Whether you need a
+                            website, mobile app, or digital marketing strategy, we’ve got you covered!</p>
                         <ul class="icon-box-list">
                             <li class="icon-box-content">
                                 <div class="icon-design">
