--- a/website-development-company.html
+++ b/website-development-company.html
@@ -1014,10 +1014,10 @@
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="http://82.112.240.94:5173/" target="_blank">Heraklean</a></h3>
+                                    <h3><a href="https://herakleangym.vercel.app/" target="_blank">Heraklean</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="http://82.112.240.94:5173/"
+                                    <a class="direction__btn direction__btn--2" href="https://herakleangym.vercel.app/"
                                         target="_blank"><svg width="34" height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
