--- a/website-development-company.html
+++ b/website-development-company.html
@@ -307,14 +307,21 @@
                                 <h2 class="heading">Contact Us</h2>
                             </div>
                             <div class="breadcrumbarea__inner">
-                                <p>Digital Minds On is best platform for app and web development. We not only develop them but
-                            also provide SEO services so you can attract larger number of audience. With Digital Minds
-                            On, you can improve the visibility and enhance the importance of your business. Contact
-                            Digital Minds On to take the business next level. We are just one click away from you, so
-                            contact us and eliminate all the issues that you are facing. Once you partner with us, you
-                            will see an incredible amount of change. Digital Minds On is not only about improving
-                            visibility, it is also about being hassle free and stress free from promotion. Get your deal
-                            done with us, contact us and see the progress of your business.</p>
+                                <p>Digital Minds On is best platform for app and web development. We not only develop
+                                    them but
+                                    also provide SEO services so you can attract larger number of audience. With Digital
+                                    Minds
+                                    On, you can improve the visibility and enhance the importance of your business.
+                                    Contact
+                                    Digital Minds On to take the business next level. We are just one click away from
+                                    you, so
+                                    contact us and eliminate all the issues that you are facing. Once you partner with
+                                    us, you
+                                    will see an incredible amount of change. Digital Minds On is not only about
+                                    improving
+                                    visibility, it is also about being hassle free and stress free from promotion. Get
+                                    your deal
+                                    done with us, contact us and see the progress of your business.</p>
                             </div>
                         </div>
                     </div>
@@ -373,13 +380,12 @@
                 <div class="row">
                     <div class="col-xl-6 aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
                         <h3>Who We Are?</h3>
-                        <p>At Digital Minds On, we are passionate about delivering cutting-edge digital solutions to
-                            help businesses thrive in today’s competitive world. As a full-service web development and
-                            digital solutions company, we specialize in providing top-notch services tailored to your
-                            business needs.
-                            Our team of highly skilled professionals is committed to transforming your ideas into
-                            reality by creating innovative, scalable, and user-friendly solutions. Whether you need a
-                            website, mobile app, or digital marketing strategy, we’ve got you covered!</p>
+                        <p>As a top web design and development company in Pakistan, we offer our clients the best
+                            solutions to help them increase their market share and accomplish their goals and objectives
+                            within the allotted time frame. Digital Minds On is a leading web design firm in Pakistan,
+                            run by experts in their domains who are constantly working to give our esteemed clients
+                            innovative, custom-made solutions via creative problem-solving. Our goal is to offer
+                            cutting-edge solutions for the creation of websites.</p>
                         <ul class="icon-box-list">
                             <li class="icon-box-content">
                                 <div class="icon-design">
@@ -1032,9 +1038,37 @@
                             </div>
                         </div>
                     </div>
+                    <!-- nextonpackaging -->
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-delay="900">
+                        <div class="project__single single__transform">
+                            <div class="project__img">
+                                <img src="assets/img/full-page/nexonpackaging.webp" alt="gym" loading="lazy"
+                                    class="lazy-load">
+                            </div>
+                            <div class="project__content">
+                                <div class="project__heading">
+                                    <h3><a href="https://www.nexonpackaging.com/" target="_blank">Nexonpackaging</a>
+                                    </h3>
+                                </div>
+                                <div class="project__icon">
+                                    <a class="direction__btn direction__btn--2" href="https://www.nexonpackaging.com/"
+                                        target="_blank"><svg width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
+                                                stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                                stroke-linejoin="round"></path>
+                                            <path d="M10.9902 23.0107L22.8908 11.1101" stroke="#0A0624"
+                                                stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                                stroke-linejoin="round"></path>
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="row">
-                    <h3 style="text-align: center; margin-bottom: 30px;">Mobile App</h3>
+                    <h3 style="text-align: center; margin-bottom: 30px; font-size: 37px;">Mobile App</h3>
                     <!-- Alleo.ai -->
                     <div class="col-xl-3 col-lg-3 col-md-4 col-sm-12 col-12" data-aos="fade-up" data-aos-delay="1000">
                         <div class="project__single single__transform">
