--- a/website-development-company.html
+++ b/website-development-company.html
@@ -322,6 +322,48 @@
                                     visibility, it is also about being hassle free and stress free from promotion. Get
                                     your deal
                                     done with us, contact us and see the progress of your business.</p>
+                                <section class="features-section">
+                                    <h3>Why Choose The Digital Minds On</h3>
+                                    <div class="feature-box">
+                                        <i class="icofont-money feature-icon"></i>
+                                        <div class="feature-text">Cost Efficient</div>
+                                    </div>
+
+                                    <div class="feature-box">
+                                        <i class="icofont-wall-clock feature-icon"></i>
+                                        <div class="feature-text">Minimal Timelines</div>
+                                    </div>
+
+                                    <div class="feature-box">
+                                        <i class="icofont-certificate-alt-2 feature-icon"></i>
+                                        <div class="feature-text">Quality Standards</div>
+                                    </div>
+
+                                    <div class="feature-box">
+                                        <i class="icofont-light-bulb feature-icon"></i>
+                                        <div class="feature-text">Project Management</div>
+                                    </div>
+
+                                    <div class="feature-box">
+                                        <i class="icofont-speech-comments feature-icon"></i>
+                                        <div class="feature-text">Effective Communication</div>
+                                    </div>
+
+                                    <div class="feature-box">
+                                        <i class="icofont-headphone-alt feature-icon"></i>
+                                        <div class="feature-text">Lifetime Support</div>
+                                    </div>
+                                    <div class="feature-button">
+                                        <button class="default__button">
+                                            <a href="https://wa.me/923086582833" target="_blank">
+                                                Schedule Meeting
+                                            </a>
+                                        </button>
+                                        <button class="default__button">
+                                            <a href="#contact" data-scroll-nav="7">Get Free Consultation</a>
+                                        </button>
+                                    </div>
+                                </section>
                             </div>
                         </div>
                     </div>
@@ -779,7 +821,7 @@
         <div class="all__project sp_top_140 sp_bottom_140 special__spacing" data-scroll="4" id="portfolio">
             <div class="container">
                 <div class="row">
-                    <h3 style="text-align: center; margin-bottom: 30px;">Portfolio</h3>
+                    <h3 style="text-align: center; margin-bottom: 30px; font-size: 37px;">Portfolio</h3>
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-delay="100">
                         <div class="project__single single__transform">
                             <div class="project__img">
