--- a/website-development-company.html
+++ b/website-development-company.html
@@ -319,11 +319,9 @@
                                     us, you
                                     will see an incredible amount of change. Digital Minds On is not only about
                                     improving
-                                    visibility, it is also about being hassle free and stress free from promotion. Get
-                                    your deal
-                                    done with us, contact us and see the progress of your business.</p>
+                                    visibility, it is also about being hassle free and stress free from promotion.</p>
                                 <section class="features-section">
-                                    <h3>Why Choose The Digital Minds On</h3>
+                                    <h3 style="text-align: center; width: 100%;">Why Choose The Digital Minds On</h3>
                                     <div class="feature-box">
                                         <i class="icofont-money feature-icon"></i>
                                         <div class="feature-text">Cost Efficient</div>
@@ -397,7 +395,7 @@
                                     <!-- CAPTCHA Math Question -->
                                     <div class="col-xl-12">
                                         <p>Solve: <span id="captchaQuestion"></span></p>
-                                        <input type="number" id="captchaAnswer" class="contact__common__input"
+                                        <input type="number" id="captchaAnswer" name="captchaAnswer" class="contact__common__input"
                                             placeholder="Your Answer" required>
                                     </div>
                                     <div class="col-xl-12">
@@ -441,20 +439,6 @@
                                     <i class="icofont-smile"></i>
                                 </div>
                                 <p class="box-title"><span>happy client</span></p>
-                            </li>
-
-                            <li class="icon-box-content">
-                                <div class="icon-design">
-                                    <i class="icofont-hand-holding-usd"></i>
-                                </div>
-                                <p class="box-title"><span>Projuct Complate</span></p>
-                            </li>
-
-                            <li class="icon-box-content">
-                                <div class="icon-design">
-                                    <i class="icofont-check-alt"></i>
-                                </div>
-                                <p class="box-title"><span>Audit At Zero Cost</span></p>
                             </li>
                         </ul>
 
@@ -1797,7 +1781,7 @@
                                     <!-- CAPTCHA Math Question -->
                                     <div class="col-xl-12">
                                         <p>Solve: 7 + 4 = ? <span id="captchaQuestion"></span></p>
-                                        <input type="number" id="captchaAnswer" class="contact__common__input"
+                                        <input type="number" id="captchaAnswer" name="captchaAnswer" class="contact__common__input"
                                             placeholder="Your Answer" required>
                                     </div>
                                     <div class="col-xl-12">
